k8s/chatapp-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapp-frontend
  namespace: chat-app
  labels:
    app: chatapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: chatapp-frontend
        image: peerslandfrontend.azurecr.io/peerslandfrontend:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: frontend-data
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf  
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: frontend-data
        configMap:
          name: nginx-config
