k8s/chatapp-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatapp-frontend
  namespace: chat-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
